--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
                         liff.shareTargetPicker(
                                 [{
                                     "type": "flex",
-                                    "altText": "this is a flex message",
+                                    "altText": "LINE名片",
                                     "contents": {
                                         "type": "carousel",
                                         "contents": [{
@@ -312,9 +312,6 @@
     <ul>
         <li>Flask: 一個使用Python編寫的輕量級Web應用框架。</li>
         <li>line-bot-sdk: 一個基於Python的SDK，可用於呼叫LINE BOT API。</li>
-        <li>Pymongo: 串連No SQL資料庫型態的MongoDB所使用的python套件。</li>
-        <li>Requests: 用於透過pyhon發出request的套件。</li>
-        <li>BeautifulSoup4: 用於解析HTML文檔的套件。</li>
     </ul>
 </body>
 
