--- a/templates/index.html
+++ b/templates/index.html
@@ -277,7 +277,7 @@
                                         }]
                                     }
                                 }, ], {
-                                    isMultiple: false,
+                                    isMultiple: true,
                                 }
                             )
                             .then(function(res) {
