--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,11 @@
             alert(accessToken);
         }
 
+        function liff_getIDToken() {
+            var IDToken = liff.getIDToken();
+            alert(IDToken);
+        }
+
         function liff_isApiAvailable() {
             var apiName = 'shareTargetPicker'
             var isApiAvailable = liff.isApiAvailable(apiName);
@@ -98,7 +103,8 @@
     <button onclick="liff_login()">登入LINE</button>
     <button onclick="liff_logout()">登出LINE</button>
     <button onclick="liff_isApiAvailable()">顯示是否此網頁可用liff.shareTargetPicker() API</button>
-    <button onclick="liff_getAccessToken()">獲得accessToken</button>
+    <button onclick="liff_getAccessToken()">獲得用戶accessToken</button>
+    <button onclick="liff_getIDToken()">獲得用戶IDToken</button>
 
 
 </body>
