--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
             alert(IDToken);
         }
 
-        function getDecodedIDToken() {
+        function liff_getDecodedIDToken() {
             var DecodedIDToken = liff.getDecodedIDToken();
             alert(DecodedIDToken);
         }
