--- a/templates/index.html
+++ b/templates/index.html
@@ -70,6 +70,7 @@
         function liff_getDecodedIDToken() {
             var DecodedIDToken = liff.getDecodedIDToken();
             alert(DecodedIDToken);
+            console.log(DecodedIDToken)
         }
 
         function liff_isApiAvailable() {
