--- a/templates/index.html
+++ b/templates/index.html
@@ -82,6 +82,11 @@
             alert(Profile);
         }
 
+        function liff_getFriendship() {
+            var Friendship = liff.getFriendship();
+            alert(Friendship);
+        }
+
         function liff_isApiAvailable() {
             var apiName = 'shareTargetPicker'
             var isApiAvailable = liff.isApiAvailable(apiName);
@@ -123,6 +128,7 @@
     <button onclick="liff_getDecodedIDToken()">獲得用戶DecodedIDToken</button>
     <button onclick="liff_getContext()">獲得啟動LIFF網頁來源的背景資訊</button>
     <button onclick="liff_getProfile()">獲得使用者資訊</button>
+    <button onclick="liff_getFriendship()">顯示是否加入官方帳號為好友</button>
 
 
 </body>
