--- a/templates/index.html
+++ b/templates/index.html
@@ -103,6 +103,16 @@
             liff.closeWindow()
         }
 
+        function liff_shareTargetPicker() {
+            liff.shareTargetPicker([{
+                "type": "image",
+                "originalContentUrl": "https://pic.pimg.tw/saryh777/1641637885-2419307650-g_n.png",
+                "previewImageUrl": "https://pic.pimg.tw/saryh777/1641637885-2419307650-g_n.png"
+            }, ], {
+                isMultiple: true,
+            })
+        }
+
         function liff_isApiAvailable() {
             var apiName = 'shareTargetPicker'
             var isApiAvailable = liff.isApiAvailable(apiName);
@@ -112,7 +122,6 @@
                 alert('可以使用' + apiName + ' API')
             }
         }
-
 
         $(document).ready(function() {
             var liffId = '1655997438-X8vP2vQB';
@@ -146,8 +155,9 @@
     <button onclick="liff_getProfile()">獲得使用者資訊</button>
     <button onclick="liff_getFriendship()">顯示是否加入官方帳號為好友</button>
     <button onclick="liff_sendMessages()">傳送訊息</button>
-    <button onclick="liff_openWindow()">開啟視窗</button>
-    <button onclick="liff_closeWindow()">關閉視窗</button>
+    <button onclick="liff_openWindow()">開啟新視窗</button>
+    <button onclick="liff_closeWindow()">關閉新視窗</button>
+    <button onclick="liff_shareTargetPicker()">分享指定訊息</button>
 
 
 </body>
