--- a/templates/index.html
+++ b/templates/index.html
@@ -139,26 +139,25 @@
         <li>line-bot-sdk: 一個基於Python的SDK，可用於呼叫LINE BOT API。</li>
     </ul>
 
-    <button onclick="liff_getOS()">顯示使用者操作系統</button>
-    <button onclick="liff_getLanguage()">顯示使用者語言</button>
-    <button onclick="liff_getVersion()">顯示LIFF SDK版本</button>
-    <button onclick="liff_getLineVersion()">顯示LINE版本</button>
-    <button onclick="liff_isInClient()">顯示是否在LIFF瀏覽器內</button>
-    <button onclick="liff_isLoggedIn()">顯示是否登入LINE</button>
-    <button onclick="liff_login()">登入LINE</button>
-    <button onclick="liff_logout()">登出LINE</button>
-    <button onclick="liff_isApiAvailable()">顯示是否此網頁可用liff.shareTargetPicker() API</button>
-    <button onclick="liff_getAccessToken()">獲得用戶accessToken</button>
-    <button onclick="liff_getIDToken()">獲得用戶IDToken</button>
-    <button onclick="liff_getDecodedIDToken()">獲得用戶DecodedIDToken</button>
-    <button onclick="liff_getContext()">獲得啟動LIFF網頁來源的背景資訊</button>
-    <button onclick="liff_getProfile()">獲得使用者資訊</button>
-    <button onclick="liff_getFriendship()">顯示是否加入官方帳號為好友</button>
-    <button onclick="liff_sendMessages()">傳送訊息</button>
-    <button onclick="liff_openWindow()">開啟新視窗</button>
-    <button onclick="liff_closeWindow()">關閉新視窗</button>
+    <button onclick="liff_getOS()">顯示使用者操作系統</button><br>
+    <button onclick="liff_getLanguage()">顯示使用者語言</button><br>
+    <button onclick="liff_getVersion()">顯示LIFF SDK版本</button><br>
+    <button onclick="liff_getLineVersion()">顯示LINE版本</button><br>
+    <button onclick="liff_isInClient()">顯示是否在LIFF瀏覽器內</button><br>
+    <button onclick="liff_isLoggedIn()">顯示是否登入LINE</button><br>
+    <button onclick="liff_login()">登入LINE</button><br>
+    <button onclick="liff_logout()">登出LINE</button><br>
+    <button onclick="liff_isApiAvailable()">顯示是否此網頁可用liff.shareTargetPicker() API</button><br>
+    <button onclick="liff_getAccessToken()">獲得用戶accessToken</button><br>
+    <button onclick="liff_getIDToken()">獲得用戶IDToken</button><br>
+    <button onclick="liff_getDecodedIDToken()">獲得用戶DecodedIDToken</button><br>
+    <button onclick="liff_getContext()">獲得啟動LIFF網頁來源的背景資訊</button><br>
+    <button onclick="liff_getProfile()">獲得使用者資訊</button><br>
+    <button onclick="liff_getFriendship()">顯示是否加入官方帳號為好友</button><br>
+    <button onclick="liff_sendMessages()">傳送訊息</button><br>
+    <button onclick="liff_openWindow()">開啟新視窗</button><br>
+    <button onclick="liff_closeWindow()">關閉新視窗</button><br>
     <button onclick="liff_shareTargetPicker()">分享指定訊息</button>
-
 
 </body>
 
