--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
         }
 
         function liff_getProfile() {
-            var Profile = liff.getProfile();
+            var Profile = JSON.stringify(liff.getProfile());
             alert(Profile.displayName);
         }
 
