--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,15 @@
     <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
     <script>
+        //==========================LIFF API初始化================================
+        $(document).ready(function() {
+            var liffId = '1655997438-X8vP2vQB';
+            liff.init({
+                liffId
+            })
+        });
+        //==========================LIFF API初始化================================
+
         function liff_getOS() {
             var OS = liff.getOS();
             alert(OS);
@@ -122,13 +131,6 @@
                 alert('可以使用' + apiName + ' API')
             }
         }
-
-        $(document).ready(function() {
-            var liffId = '1655997438-X8vP2vQB';
-            liff.init({
-                liffId
-            })
-        })
     </script>
 </head>
 
