--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <script>
         //==========================LIFF API初始化================================
         $(document).ready(function() {
-            liff.init({'1655997438-X8vP2vQB'});
+            liff.init({liffId:'1655997438-X8vP2vQB'});
         });
         //==========================LIFF API初始化================================
 
