--- a/templates/liff.html
+++ b/templates/liff.html
@@ -11,7 +11,7 @@
     <script>
         //==========================LIFF API初始化================================
         $(document).ready(function() {
-            liff.init({liffId:'1655997438-X8vP2vQB'});
+            liff.init({liffId:'1639621139-0Oq3oJMz'});
         });
         //==========================LIFF API初始化================================
 
@@ -110,6 +110,7 @@
         function liff_openWindow() {
             liff.openWindow({
                 url: "https://developers.line.biz/en/reference/liff/",
+                external:true
             });
         }
 
