--- a/templates/liff.html
+++ b/templates/liff.html
@@ -99,10 +99,10 @@
         }
 
         function liff_sendMessages() {
-            var message = {
+            var message =[{
                 "type": "text",
                 "text": "LIFF傳送訊息",
-            };
+            }];
             liff.sendMessages(message)
             alert('LIFF傳送訊息')
         }
