--- a/templates/liff.html
+++ b/templates/liff.html
@@ -101,7 +101,7 @@
         function liff_sendMessages() {
             var message =[{
                 "type": "text",
-                "text": "LIFF傳送訊息",
+                "text": "這一則訊息是來自LIFF網頁",
             }];
             liff.sendMessages(message)
             alert('LIFF傳送訊息')
