--- a/templates/liff.html
+++ b/templates/liff.html
@@ -155,7 +155,7 @@
 </head>
 
 <body>
-    <h1>Maso的萬事屋LIFF API測試範例：</h1>
+    <h1>Maso的萬事屋</h1><h1>LIFF API測試範例：</h1>
     <h1></h1>
     <button onclick="liff_getOS()">顯示使用者作業系統</button><br><br>
     <button onclick="liff_getLanguage()">顯示使用者語言</button><br><br>
