--- a/templates/liff.html
+++ b/templates/liff.html
@@ -11,7 +11,7 @@
     <script>
         //==========================LIFF API初始化================================
         $(document).ready(function() {
-            liff.init({liffId:'1639621139-0Oq3oJMz'});
+            liff.init({liffId:'1657051799-oEqeJl0a'});
         });
         //==========================LIFF API初始化================================
 
