--- a/templates/liff.html
+++ b/templates/liff.html
@@ -109,7 +109,7 @@
 
         function liff_openWindow() {
             liff.openWindow({
-                url: "https://developers.line.biz/en/reference/liff/",
+                url: "https://www.google.com",
                 external:true
             });
         }
