--- a/templates/liff.html
+++ b/templates/liff.html
@@ -108,6 +108,7 @@
         }
 
         function liff_openWindow() {
+            window.location.replace("https://www.google.com")
             liff.openWindow({
                 url: "https://www.google.com",
                 external:true
@@ -177,5 +178,4 @@
     <button onclick="liff_shareTargetPicker()">分享指定訊息</button>
 
 </body>
-
 </html>
