--- a/templates/liff.html
+++ b/templates/liff.html
@@ -109,9 +109,9 @@
         }
 
         function liff_openWindow() {
-            window.location.replace("https://www.google.com")
+            // window.location.replace("https://developers.line.biz/en/reference/liff/")
             liff.openWindow({
-                url: "https://www.google.com",
+                url: "https://developers.line.biz/en/reference/liff/",
                 external:true
             });
         }
