--- a/templates/liff.html
+++ b/templates/liff.html
@@ -130,6 +130,153 @@
             })
         }
 
+        function liff_shareTargetPicker() {
+            liff.shareTargetPicker([{
+                "type": "flex",
+                "altText": "Maso的LINE名片",
+                "contents": {
+                    "type": "carousel",
+                    "contents": [
+                      {
+                        "type": "bubble",
+                        "size": "mega",
+                        "hero": {
+                          "type": "image",
+                          "url": "https://i.imgur.com/ZuRTzVj.png",
+                          "size": "full",
+                          "margin": "none",
+                          "align": "center",
+                          "gravity": "center",
+                          "position": "relative",
+                          "flex": 0,
+                          "animated": false,
+                          "aspectMode": "cover",
+                          "aspectRatio": "64:72"
+                        },
+                        "body": {
+                          "type": "box",
+                          "layout": "vertical",
+                          "contents": [
+                            {
+                              "type": "box",
+                              "layout": "vertical",
+                              "contents": [
+                                {
+                                  "type": "text",
+                                  "text": "◈ 我發現了一把鏟子\n\n某天，因為朋友在LINE群組中加入了一個聊天機器人，原本只是想要搜尋還有哪些聊天機器人好用的我，卻意外地發現了一些如何製作聊天機器人的教學文章。\n\n在懵懵懂懂的情況下，我發現了這把名為程式尋寶的鏟子，從那時候起我開啟了這趟發掘可能性的旅程…\n\n",
+                                  "wrap": true,
+                                  "size": "sm"
+                                }
+                              ]
+                            },
+                            {
+                              "type": "box",
+                              "layout": "vertical",
+                              "contents": [
+                                {
+                                  "type": "button",
+                                  "action": {
+                                    "type": "uri",
+                                    "label": "❖　看看我挖到什麼",
+                                    "uri": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ"
+                                  },
+                                  "style": "secondary",
+                                  "color": "#B5EAEF"
+                                },
+                                {
+                                  "type": "button",
+                                  "action": {
+                                    "type": "postback",
+                                    "label": "❖　Maso的鑄鐵坊",
+                                    "data": "Maso的鑄鐵坊"
+                                  },
+                                  "style": "secondary",
+                                  "color": "#B5EAEF",
+                                  "margin": "lg"
+                                }
+                              ]
+                            }
+                          ]
+                        },
+                        "styles": {
+                          "hero": {
+                            "separator": true
+                          }
+                        }
+                      },
+                      {
+                        "type": "bubble",
+                        "hero": {
+                          "type": "image",
+                          "url": "https://i.imgur.com/tCGgamM.png",
+                          "align": "center",
+                          "gravity": "center",
+                          "size": "full",
+                          "aspectMode": "cover",
+                          "animated": false,
+                          "aspectRatio": "64:72"
+                        },
+                        "body": {
+                          "type": "box",
+                          "layout": "vertical",
+                          "contents": [
+                            {
+                              "type": "box",
+                              "layout": "vertical",
+                              "contents": [
+                                {
+                                  "type": "text",
+                                  "text": "◈ 坑越挖越大洞啦\n\n沒錯，踏上這條不歸路的人們都懂得，手上的這把鏟子是一個會讓你深陷越大越大的坑洞之中，沒有終止的一天的可怕工具，但在我回過神來的時候，才發現自己已癡迷於探索它所帶來的無限知識寶藏，你可以說我是個打字的，也可以說我是個挖坑的，坑都挖好了，準備好要一起跳進去了嗎？(Y/N)\n\n",
+                                  "wrap": true,
+                                  "size": "sm",
+                                  "gravity": "top"
+                                }
+                              ]
+                            },
+                            {
+                              "type": "box",
+                              "layout": "vertical",
+                              "contents": [
+                                {
+                                  "type": "button",
+                                  "action": {
+                                    "type": "uri",
+                                    "label": "❖　加入Maso的好友",
+                                    "uri": "http://linecorp.com/"
+                                  },
+                                  "style": "secondary",
+                                  "color": "#B5EAEF",
+                                  "gravity": "center"
+                                },
+                                {
+                                  "type": "button",
+                                  "action": {
+                                    "type": "uri",
+                                    "label": "❖　訂閱Maso的萬事屋",
+                                    "uri": "http://linecorp.com/"
+                                  },
+                                  "color": "#B5EAEF",
+                                  "style": "secondary",
+                                  "margin": "lg"
+                                }
+                              ]
+                            }
+                          ]
+                        },
+                        "styles": {
+                          "hero": {
+                            "separator": true
+                          }
+                        }
+                      }
+                    ]
+                  }
+              }], {
+                isMultiple: true,
+            })
+        }
+
+
         function liff_isApiAvailable() {
             var apiName = 'shareTargetPicker'
             var isApiAvailable = liff.isApiAvailable(apiName);
@@ -177,6 +324,9 @@
     <button onclick="liff_openWindow()">開啟新視窗</button><br><br>
     <button onclick="liff_closeWindow()">關閉新視窗</button><br><br>
     <button onclick="liff_shareTargetPicker()">分享指定訊息</button>
+    <button onclick="liff_LINE_Card()">傳送LINE名片</button>
+    <br>
+    <br>
 
 </body>
 </html>
