--- a/templates/liff.html
+++ b/templates/liff.html
@@ -323,10 +323,9 @@
     <button onclick="liff_sendMessages()">傳送訊息</button><br><br>
     <button onclick="liff_openWindow()">開啟新視窗</button><br><br>
     <button onclick="liff_closeWindow()">關閉新視窗</button><br><br>
-    <button onclick="liff_shareTargetPicker()">分享指定訊息</button>
-    <button onclick="liff_LINE_Card()">傳送LINE名片</button>
-    <br>
-    <br>
+    <button onclick="liff_shareTargetPicker()">分享指定訊息</button><br><br>
+    <button onclick="liff_LINE_Card()">傳送LINE名片</button><br><br>
+    <br><br>
 
 </body>
 </html>
