--- a/templates/liff.html
+++ b/templates/liff.html
@@ -130,7 +130,7 @@
             })
         }
 
-        function liff_shareTargetPicker() {
+        function liff_LINE_Card() {
             liff.shareTargetPicker([{
                 "type": "flex",
                 "altText": "Maso的LINE名片",
@@ -242,7 +242,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　加入Maso的好友",
-                                    "uri": "http://linecorp.com/"
+                                    "uri": "https://liff.line.me/1657051799-oEqeJl0a"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF",
@@ -253,7 +253,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　訂閱Maso的萬事屋",
-                                    "uri": "http://linecorp.com/"
+                                    "uri": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ?sub_confirmation=1"
                                   },
                                   "color": "#B5EAEF",
                                   "style": "secondary",
