--- a/templates/liff.html
+++ b/templates/liff.html
@@ -240,7 +240,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　加入Maso的好友",
-                                    "uri": "https://liff.line.me/1657051799-oEqeJl0a",
+                                    "uri": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ?sub_confirmation=1",
                                     "altUri": {
                                       "desktop": "https://liff.line.me/1657051799-oEqeJl0a"
                                     }
