--- a/templates/liff.html
+++ b/templates/liff.html
@@ -178,10 +178,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　看看我挖到什麼",
-                                    "uri": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ",
-                                    "altUri": {
-                                      "desktop": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ"
-                                    }
+                                    "uri": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF"
@@ -240,24 +237,17 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　加入Maso的好友",
-                                    "uri": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ?sub_confirmation=1",
-                                    "altUri": {
-                                      "desktop": "https://liff.line.me/1657051799-oEqeJl0a"
-                                    }
+                                    "uri": "https://i.imgur.com/tCGgamM.png"
                                   },
                                   "style": "secondary",
-                                  "color": "#B5EAEF",
-                                  "gravity": "center"
+                                  "color": "#B5EAEF"
                                 },
                                 {
                                   "type": "button",
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　訂閱Maso的萬事屋",
-                                    "uri": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ?sub_confirmation=1",
-                                    "altUri": {
-                                      "desktop": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ?sub_confirmation=1"
-                                    }
+                                    "uri": "https://i.imgur.com/tCGgamM.png"
                                   },
                                   "color": "#B5EAEF",
                                   "style": "secondary",
