--- a/templates/liff.html
+++ b/templates/liff.html
@@ -178,7 +178,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　看看我挖到什麼",
-                                    "uri": "http://linecorp.com/"
+                                    "uri": "https://www.youtube.com/user/poqetkimo/videos"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF"
@@ -186,9 +186,9 @@
                                 {
                                   "type": "button",
                                   "action": {
-                                    "type": "uri",
+                                    "type": "postback",
                                     "label": "❖　Maso的鑄鐵坊",
-                                    "uri": "http://linecorp.com/"
+                                    "data": "Maso的鑄鐵坊"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF",
@@ -237,7 +237,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　加入Maso的好友",
-                                    "uri": "http://linecorp.com/"
+                                    "uri": "https://line.me/ti/p/KeRocPY6PP"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF"
@@ -247,7 +247,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　訂閱Maso的萬事屋",
-                                    "uri": "http://linecorp.com/"
+                                    "uri": "https://i.imgur.com/tCGgamM.png"
                                   },
                                   "color": "#B5EAEF",
                                   "style": "secondary",
