--- a/templates/liff.html
+++ b/templates/liff.html
@@ -237,7 +237,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　加入Maso的好友",
-                                    "uri": "https://line.me/ti/p/KeRocPY6PP"
+                                    "uri": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ?sub_confirmation=1"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF"
@@ -247,7 +247,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　訂閱Maso的萬事屋",
-                                    "uri": "https://i.imgur.com/tCGgamM.png"
+                                    "uri": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ?sub_confirmation=1"
                                   },
                                   "color": "#B5EAEF",
                                   "style": "secondary",
