--- a/templates/liff.html
+++ b/templates/liff.html
@@ -237,7 +237,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　加入Maso的好友",
-                                    "uri": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ?sub_confirmation=1"
+                                    "uri": "https://www.youtube.com/user/poqetkimo/videos"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF"
@@ -263,6 +263,7 @@
               }], {
                 isMultiple: true,
             })
+            liff.closeWindow()
         }
 
 
