--- a/templates/liff.html
+++ b/templates/liff.html
@@ -247,7 +247,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　訂閱Maso的萬事屋",
-                                    "uri": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ?sub_confirmation=1"
+                                    "uri": "https://www.youtube.com/user/poqetkimo/videos"
                                   },
                                   "color": "#B5EAEF",
                                   "style": "secondary",
