--- a/templates/liff.html
+++ b/templates/liff.html
@@ -178,7 +178,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　看看我挖到什麼",
-                                    "uri": "https://www.youtube.com/user/poqetkimo/videos"
+                                    "uri": "https://www.youtube.com/user/poqetkimo"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF"
@@ -188,7 +188,7 @@
                                   "action": {
                                     "type": "postback",
                                     "label": "❖　Maso的鑄鐵坊",
-                                    "data": "Maso的鑄鐵坊"
+                                    "data": "Maso的鑄鐵坊  https://www.youtube.com/user/poqetkimo?sub_confirmation=1"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF",
@@ -237,7 +237,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　加入Maso的好友",
-                                    "uri": "https://www.youtube.com/user/poqetkimo/videos"
+                                    "uri": "https://www.youtube.com/user/poqetkimo"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF"
@@ -247,7 +247,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　訂閱Maso的萬事屋",
-                                    "uri": "https://www.youtube.com/user/poqetkimo/videos"
+                                    "uri": "https://www.youtube.com/user/poqetkimo"
                                   },
                                   "color": "#B5EAEF",
                                   "style": "secondary",
