--- a/templates/liff.html
+++ b/templates/liff.html
@@ -178,7 +178,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　看看我挖到什麼",
-                                    "uri": "https://www.youtube.com/user/poqetkimo"
+                                    "uri": "https://reurl.cc/Er8dKv"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF"
@@ -237,7 +237,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　加入Maso的好友",
-                                    "uri": "https://www.youtube.com/user/poqetkimo"
+                                    "uri": "https://reurl.cc/LmjG1X"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF"
@@ -247,7 +247,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　訂閱Maso的萬事屋",
-                                    "uri": "https://www.youtube.com/user/poqetkimo"
+                                    "uri": "https://reurl.cc/e3vY5M"
                                   },
                                   "color": "#B5EAEF",
                                   "style": "secondary",
