--- a/templates/liff.html
+++ b/templates/liff.html
@@ -178,7 +178,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　看看我挖到什麼",
-                                    "uri": "https://reurl.cc/Er8dKv"
+                                    "uri": "https://www.youtube.com/user/poqetkimo"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF"
@@ -188,7 +188,7 @@
                                   "action": {
                                     "type": "postback",
                                     "label": "❖　Maso的鑄鐵坊",
-                                    "data": "Maso的鑄鐵坊  https://www.youtube.com/user/poqetkimo?sub_confirmation=1"
+                                    "data": "Maso的鑄鐵坊"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF",
@@ -235,9 +235,9 @@
                                 {
                                   "type": "button",
                                   "action": {
-                                    "type": "uri",
-                                    "label": "❖　加入Maso的好友",
-                                    "uri": "https://reurl.cc/LmjG1X"
+                                    "type": "postback",
+                                    "label": "action",
+                                    "data": "hello"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF"
@@ -245,9 +245,9 @@
                                 {
                                   "type": "button",
                                   "action": {
-                                    "type": "uri",
-                                    "label": "❖　訂閱Maso的萬事屋",
-                                    "uri": "https://reurl.cc/e3vY5M"
+                                    "type": "postback",
+                                    "label": "action",
+                                    "data": "hello"
                                   },
                                   "color": "#B5EAEF",
                                   "style": "secondary",
