--- a/templates/liff.html
+++ b/templates/liff.html
@@ -178,7 +178,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　看看我挖到什麼",
-                                    "uri": "https://www.youtube.com/user/poqetkimo"
+                                    "uri": "https://developers.line.biz/flex-simulator/"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF"
@@ -235,9 +235,9 @@
                                 {
                                   "type": "button",
                                   "action": {
-                                    "type": "postback",
-                                    "label": "action",
-                                    "data": "hello"
+                                    "type": "uri",
+                                    "label": "❖　加入Maso的好友",
+                                    "uri": "https://developers.line.biz/flex-simulator/"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF"
@@ -245,9 +245,9 @@
                                 {
                                   "type": "button",
                                   "action": {
-                                    "type": "postback",
-                                    "label": "action",
-                                    "data": "hello"
+                                    "type": "uri",
+                                    "label": "❖　訂閱Maso的萬事屋",
+                                    "uri": "https://developers.line.biz/flex-simulator/"
                                   },
                                   "color": "#B5EAEF",
                                   "style": "secondary",
