--- a/templates/liff.html
+++ b/templates/liff.html
@@ -178,7 +178,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　看看我挖到什麼",
-                                    "uri": "https://developers.line.biz/flex-simulator/"
+                                    "uri": "https://i.imgur.com/tCGgamM.png"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF"
@@ -237,7 +237,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　加入Maso的好友",
-                                    "uri": "https://developers.line.biz/flex-simulator/"
+                                    "uri": "https://i.imgur.com/tCGgamM.png"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF"
@@ -247,7 +247,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　訂閱Maso的萬事屋",
-                                    "uri": "https://developers.line.biz/flex-simulator/"
+                                    "uri": "https://i.imgur.com/tCGgamM.png"
                                   },
                                   "color": "#B5EAEF",
                                   "style": "secondary",
