--- a/templates/liff.html
+++ b/templates/liff.html
@@ -263,7 +263,13 @@
               }], {
                 isMultiple: true,
             })
-            liff.closeWindow()
+            .then(function (res) {
+                liff.closeWindow()
+                }
+              }).catch(function (error) {
+                // something went wrong before sending a message
+                console.log('something wrong happen')
+              })
         }
 
 
