--- a/templates/liff.html
+++ b/templates/liff.html
@@ -272,6 +272,7 @@
             }).catch(function (error) {
             // something went wrong before sending a message
             console.log('something wrong happen')
+            console.log(error)
             })
         }
 
