--- a/templates/liff.html
+++ b/templates/liff.html
@@ -179,7 +179,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　看看我挖到什麼",
-                                    "uri": "http://linecorp.com/"
+                                    "uri": "https://www.google.com"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF"
@@ -238,7 +238,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　加入Maso的好友",
-                                    "uri": "http://linecorp.com/"
+                                    "uri": "https://www.google.com"
                                   },
                                   "style": "secondary",
                                   "color": "#B5EAEF"
@@ -248,7 +248,7 @@
                                   "action": {
                                     "type": "uri",
                                     "label": "❖　訂閱Maso的萬事屋",
-                                    "uri": "http://linecorp.com/"
+                                    "uri": "https://www.google.com"
                                   },
                                   "color": "#B5EAEF",
                                   "style": "secondary",
