--- a/templates/liff.html
+++ b/templates/liff.html
@@ -134,8 +134,7 @@
         }
 
         function liff_LINE_Card() {
-            liff
-                .shareTargetPicker(
+            liff.shareTargetPicker(
                     [{
                         type: "flex",
                         altText: "Maso的LINE名片",
